# 2026-personal-datascout

./: .gitignore  pyproject.toml  scan.py
.github/workflows/: scan.yml
data/: seen_items.json
docs/: index.html
docs/archive/: 2026-02-11.html  2026-02-12.html  2026-02-13.html  2026-02-16.html  2026-02-17.html  2026-02-18.html  2026-02-19.html  2026-02-20.html  2026-02-23.html  2026-02-24.html  2026-02-25.html  2026-02-26.html  2026-02-27.html  2026-03-02.html  2026-03-03.html  2026-03-04.html  2026-03-05.html  2026-03-06.html  2026-03-09.html  2026-03-10.html  2026-03-11.html  2026-03-12.html  2026-03-13.html  2026-03-16.html  2026-03-17.html  2026-03-18.html  2026-03-19.html  2026-03-20.html  2026-03-23.html  2026-03-24.html  2026-03-25.html  2026-03-26.html  2026-03-27.html  2026-03-30.html  2026-03-31.html  2026-04-01.html  2026-04-02.html  2026-04-03.html  2026-04-06.html  2026-04-07.html  (+48 more)
templates/: briefing.html
