[project]
name = "2026-personal-datascout"
version = "0.1.0"
description = "Automated daily data journalism briefing for Canadian audience"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "feedparser>=6.0.12",
    "google-genai>=1.62.0",
    "jinja2>=3.1.6",
    "requests>=2.32.5",
]
